--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -126,7 +126,7 @@
                 <div class="col-md-9">
                                                                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" target="_blank"><b>飞鸟加速</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -179,7 +179,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -538,16 +538,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-20-free-node-subscribe.htm" title="7月20日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">7月20日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-4-node-share-links.htm" title="7月4日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月4日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-14-free-node-subscribe.htm" title="7月14日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月14日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-6-node-share-links.htm" title="7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-23-free-subscribe-node.htm" title="6月23日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月23日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-9-free-high-speed-nodes.htm" title="7月9日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月9日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-19-free-node-subscribe.htm" title="6月19日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">6月19日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-12-free-node-subscribe-links.htm" title="6月12日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月12日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-24-free-node-subscribe.htm" title="7月24日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">7月24日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-11-free-node-subscribe-links.htm" title="7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址">7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-7-node-share.htm" title="7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-14-free-node-subscribe-links.htm" title="6月14日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">6月14日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-28-node-share.htm" title="6月28日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月28日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-21-free-node-subscribe.htm" title="6月21日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">6月21日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-18-node-share.htm" title="6月18日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址">6月18日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-27-node-share.htm" title="7月27日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月27日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-24-node-share-links.htm" title="6月24日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">6月24日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-8-node-share.htm" title="7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-18-node-share.htm" title="7月18日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月18日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-26-node-share.htm" title="6月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -559,7 +559,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
